began wordcloud code

--- a/src/scraping_presidential_speeches.ipynb
+++ b/src/scraping_presidential_speeches.ipynb
@@ -11,12 +11,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Scrapes the campaign speeches of Democratic and Republican candidates from each election cycle available on the UCSB preidency "
+    "Scrapes the campaign speeches of Democratic and Republican candidates from each election cycle available on the UCSB presidency. Stores speeches by title and date within a json file for each candidate."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 109,
    "metadata": {
     "collapsed": false
    },
@@ -24,17 +24,13 @@
    "source": [
     "import re\n",
     "import time\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
     "import json\n",
+    "\n",
+    "import pandas as pd\n",
     "\n",
     "from lxml import html\n",
     "from bs4 import BeautifulSoup\n",
-    "import requests\n",
-    "\n",
-    "from __future__ import division\n",
-    "import nltk, re, pprint\n",
-    "from nltk import word_tokenize"
+    "import requests"
    ]
   },
   {
@@ -143,7 +139,8 @@
    "cell_type": "code",
    "execution_count": 108,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
